# openai-api

./: .gitignore  pyproject.toml
openai_api/: generate_unit_test.py  openai_api.py
tests/: test_openai_api.py
