[tool.poetry]
name = "openai-api"
version = "0.1.0"
description = ""
authors = ["RaInta <raro77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.26.5"
pandas = "^1.5.3"
ipython = "^8.12.0"
ipykernel = "^6.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
